# openai-image-api-console

./: .gitignore  LICENSE  README.ja.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/default-config/: app-config.json
src-tauri/default-config/locales/: en.json  ja.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
