[package]
name = "openai-image-api"
version = "0.1.0"
description = "OpenAI Image API Console desktop app"
authors = ["pooh"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.39", features = ["serde"] }
crc32fast = "1.4.2"
dirs = "5.0.1"
reqwest = { version = "0.12.12", features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-opener = "2.5.4"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
